--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailMainstage.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailMainstage.cshtml
@@ -16,7 +16,7 @@
                             <h1 class="c-pageHeader__title">@Model.GlobalIndexDetail.IndexName</h1>
                         </div>
                         <div class="c-pageHeader__views">
-                            <div class="o-views o-views--bk">@Model.GlobalIndexDetail.ViewCount</div>
+                            <div class="o-views o-views--bk" data-eh="visit-update,visit-exec" eh-visit-pageid="@Model.PageID" eh-visit-qs="id=@Model.GlobalIndexDetail.IndexCode"></div>
                         </div>
                     </div>
                 </div>
